--- a/webapp/dfd/templates/dfd/index.html
+++ b/webapp/dfd/templates/dfd/index.html
@@ -1,10 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="{% static 'dfd/index.css' %}" >
+    <title>Deepfake Detection</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <div id='header'>
+        Deepfake Detection
+    </div>
   </body>
 </html>
